...
            child: Row(
              children: [
                if (fallbackLocation != null)
                  Semantics(
                    label: MaterialLocalizations.of(context).backButtonTooltip,
                    child: ShadIconButton.ghost(
                      key: const Key('navbar-back-button'),
                      icon: const Icon(PhosphorIconsRegular.arrowLeft),
                      onPressed: () {
                        if (context.canPop()) {
                          context.pop();
                        } else {
                          context.go(fallbackLocation);
...
